--- a/notebooks/04-docker.ipynb
+++ b/notebooks/04-docker.ipynb
@@ -4,9 +4,184 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Docker\n",
+    "<center> <h1> Docker </h1> </center>\n",
     "\n",
-    "![jupyter](images/jupyter-logo.png)"
+    "<img width=200 src=\"images/Moby-logo.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Conteneur\n",
+    "\n",
+    "Technologie logicielle datant de 2013 permettant d'éxécuter un système d'exploitation isolé et automatisé dans un autre système. La technique est proche de la virtualisation mais sans l'inconvénient de la latence.\n",
+    "\n",
+    "Un conteneur permet également de sauvegarder l'état d'un ordinateur à un instant donné et de pouvoir rédemmarrer de cet état à tout moment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Points forts\n",
+    "\n",
+    "- Installation très simple <https://www.docker.com/get-started>\n",
+    "- Ligne de commande facile à utiliser (`docker help`)\n",
+    "- Beaucoup de possibilités ( hébergement web, cloud, intégration continue, ...)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Docker en 1 ligne\n",
+    "\n",
+    "Pour vérifier que docker est bien installé\n",
+    "\n",
+    "```\n",
+    "docker run helloworld\n",
+    "```\n",
+    "\n",
+    "```\n",
+    "docker run --rm -it ubuntu /bin/bash\n",
+    "```\n",
+    "- `run` : on veut lancer le conteneur\n",
+    "- `-it` : on veut un terminal et être interactif avec lui \n",
+    "- `ubuntu` : l’image à utiliser pour ce conteneur \n",
+    "- `/bin/bash` : commande éxécutée au démarrage qui permet l'interactivité\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Les étapes du démarrage d'un image docker\n",
+    "\n",
+    "- Recherche de l’image -> Si l’image n’existe pas en local, alors téléchargement via le hub. Construction du système de fichiers.\n",
+    "- Démarrage du container\n",
+    "- Configuration de l’adresse IP du container -> Ainsi que de la communication entre l’extérieur et le conteneur\n",
+    "- Capture des messages entrées-sorties"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Principales commandes sur linux\n",
+    "\n",
+    "```\n",
+    "sudo /usr/bin/docker -d & # run the daemon\n",
+    "sudo docker search ubuntu # give ubuntu images from public index \n",
+    "sudo docker pull ubuntu # pull latest ubuntu images\n",
+    "sudo docker history ubuntu # view history for this images\n",
+    "sudo docker images # show local images\n",
+    "docker ps # show active containers\n",
+    "sudo docker logs ubuntu\n",
+    "sudo docker attach ubuntu # retake the hand on the container\n",
+    "sudo docker run -d -p 8888:80 ubuntu # export 8888 on master\n",
+    "sudo docker stop # SIGTERM suivi d’un SIGKILL\n",
+    "sudo docker kill # SIGKILL directement\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Création d'images Docker\n",
+    "\n",
+    "Il est possible de créer une image docker en utilisant des commandes en ligne mais préférez la méthode du fichier Dockerfile qui vous permettra de conserver les etapes et une trace de la procédure.\n",
+    "\n",
+    "### Premier Dockerfile\n",
+    "\n",
+    "```dockerfile\n",
+    "FROM rocker/shiny\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```dockerfile\n",
+    "FROM rocker/r-ver:3.6.3\n",
+    "\n",
+    "RUN apt-get update && apt-get install -y \\\n",
+    "    sudo \\\n",
+    "    gdebi-core \\\n",
+    "    pandoc \\\n",
+    "    pandoc-citeproc \\\n",
+    "    libcurl4-gnutls-dev \\\n",
+    "    libcairo2-dev \\\n",
+    "    libxt-dev \\\n",
+    "    xtail \\\n",
+    "    wget\n",
+    "\n",
+    "\n",
+    "# Download and install shiny server\n",
+    "RUN wget --no-verbose https://download3.rstudio.org/ubuntu-14.04/x86_64/VERSION -O \"version.txt\" && \\\n",
+    "    VERSION=$(cat version.txt)  && \\\n",
+    "    wget --no-verbose \"https://download3.rstudio.org/ubuntu-14.04/x86_64/shiny-server-$VERSION-amd64.deb\" -O ss-latest.deb && \\\n",
+    "    gdebi -n ss-latest.deb && \\\n",
+    "    rm -f version.txt ss-latest.deb && \\\n",
+    "    . /etc/environment && \\\n",
+    "    R -e \"install.packages(c('shiny', 'rmarkdown'), repos='$MRAN')\" && \\\n",
+    "    cp -R /usr/local/lib/R/site-library/shiny/examples/* /srv/shiny-server/ && \\\n",
+    "    chown shiny:shiny /var/lib/shiny-server\n",
+    "\n",
+    "EXPOSE 3838\n",
+    "\n",
+    "COPY shiny-server.sh /usr/bin/shiny-server.sh\n",
+    "\n",
+    "CMD [\"/usr/bin/shiny-server.sh\"]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Instructions\n",
+    "\n",
+    "Les instructions sont peu nombreuses : FROM, RUN, CMD, LABEL, MAINTAINER, EXPOSE, ENV, ADD, COPY, ENTRYPOINT , VOLUME, USER, WORKDIR, ARG, ONBUILD, STOPSIGNAL, HEALTHCHECK, SHELL\n",
+    "\n",
+    "- Pour chaque instruction RUN, un conteneur temporaire (8xxxxxxxx) est créé depuis l’image de base.\n",
+    "- La commande RUN est exécutée dans ce conteneur,\n",
+    "- Le conteneur est commité en une image intermédiaire (7yyyyyyyy),\n",
+    "- Le conteneur intermédiaire (8xxxxxxxx) est supprim ́e, Le résultat, l’image intermédiaire, servira d’image de base pour l’ ́etape suivante,\n",
+    "etc.."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Docker Hub\n",
+    "\n",
+    "Site public permettant de sauvegarder et partager ses images docker:\n",
+    "\n",
+    "- Déposer son fichier Dockerfile sur un dépôt github\n",
+    "- Créer une image docker sur <https://hub.docker.com> et lier cette image au dépôt github\n",
+    "- Chaque modification sur le dépôt va mettre à jour l'image\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercice\n",
+    "\n",
+    "- Creez un dépôt github personnel et déposer le ficher Dockerfile\n",
+    "\n"
    ]
   },
   {
@@ -15,485 +190,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Launch Jupyter server\n",
-    "\n",
-    "```bash\n",
-    "jupyter notebook\n",
-    "```\n",
-    "\n",
-    "\n",
-    "- Go to notebooks folder\n",
-    "- Open the file 03.JupyterQuickStart.ipynb"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "# Make a Copy\n",
-    "\n",
-    "Before modifying the notebook, make a copy of it. Go to to `File` menu\n",
-    "on the top left of the notebook and click on `Make a Copy...`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Jupyter Notebook\n",
-    "\n",
-    "Jupyter notebook, formerly known as the IPython notebook, is a flexible tool that helps you create readable analyses, as you can keep code, images, comments, formulae and plots together.\n",
-    "\n",
-    "Jupyter is quite extensible, supports many programming languages and is easily hosted on your computer or on almost any server — you only need to have ssh or http access. Best of all, it's completely free.\n",
-    "\n",
-    "The name Jupyter is an indirect acronyum of the three core languages it was designed for: **JU**lia, **PYT**hon, and **R**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Keyboard Shortcuts\n",
-    "\n",
-    "- To access keyboard shortcuts, use the command palette: `Cmd + Shift + P`\n",
-    "\n",
-    "- `Esc` will take you into command mode where you can navigate around your notebook with arrow keys.\n",
-    "- While in command mode:\n",
-    "   - A to insert a new cell above the current cell, B to insert a new cell below.\n",
-    "   - M to change the current cell to Markdown, Y to change it back to code\n",
-    "   - D + D (press the key twice) to delete the current cell\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Easy links to documentation\n",
-    "\n",
-    "- Shift + Tab will also show you the Docstring"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dict"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Magic commands\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/json": {
-       "cell": {
-        "!": "OSMagics",
-        "HTML": "Other",
-        "SVG": "Other",
-        "bash": "Other",
-        "capture": "ExecutionMagics",
-        "debug": "ExecutionMagics",
-        "file": "Other",
-        "html": "DisplayMagics",
-        "javascript": "DisplayMagics",
-        "js": "DisplayMagics",
-        "latex": "DisplayMagics",
-        "markdown": "DisplayMagics",
-        "perl": "Other",
-        "prun": "ExecutionMagics",
-        "pypy": "Other",
-        "python": "Other",
-        "python2": "Other",
-        "python3": "Other",
-        "ruby": "Other",
-        "script": "ScriptMagics",
-        "sh": "Other",
-        "svg": "DisplayMagics",
-        "sx": "OSMagics",
-        "system": "OSMagics",
-        "time": "ExecutionMagics",
-        "timeit": "ExecutionMagics",
-        "writefile": "OSMagics"
-       },
-       "line": {
-        "alias": "OSMagics",
-        "alias_magic": "BasicMagics",
-        "autoawait": "AsyncMagics",
-        "autocall": "AutoMagics",
-        "automagic": "AutoMagics",
-        "autosave": "KernelMagics",
-        "bookmark": "OSMagics",
-        "cat": "Other",
-        "cd": "OSMagics",
-        "clear": "KernelMagics",
-        "colors": "BasicMagics",
-        "conda": "PackagingMagics",
-        "config": "ConfigMagics",
-        "connect_info": "KernelMagics",
-        "cp": "Other",
-        "debug": "ExecutionMagics",
-        "dhist": "OSMagics",
-        "dirs": "OSMagics",
-        "doctest_mode": "BasicMagics",
-        "ed": "Other",
-        "edit": "KernelMagics",
-        "env": "OSMagics",
-        "gui": "BasicMagics",
-        "hist": "Other",
-        "history": "HistoryMagics",
-        "killbgscripts": "ScriptMagics",
-        "ldir": "Other",
-        "less": "KernelMagics",
-        "lf": "Other",
-        "lk": "Other",
-        "ll": "Other",
-        "load": "CodeMagics",
-        "load_ext": "ExtensionMagics",
-        "loadpy": "CodeMagics",
-        "logoff": "LoggingMagics",
-        "logon": "LoggingMagics",
-        "logstart": "LoggingMagics",
-        "logstate": "LoggingMagics",
-        "logstop": "LoggingMagics",
-        "ls": "Other",
-        "lsmagic": "BasicMagics",
-        "lx": "Other",
-        "macro": "ExecutionMagics",
-        "magic": "BasicMagics",
-        "man": "KernelMagics",
-        "matplotlib": "PylabMagics",
-        "mkdir": "Other",
-        "more": "KernelMagics",
-        "mv": "Other",
-        "notebook": "BasicMagics",
-        "page": "BasicMagics",
-        "pastebin": "CodeMagics",
-        "pdb": "ExecutionMagics",
-        "pdef": "NamespaceMagics",
-        "pdoc": "NamespaceMagics",
-        "pfile": "NamespaceMagics",
-        "pinfo": "NamespaceMagics",
-        "pinfo2": "NamespaceMagics",
-        "pip": "PackagingMagics",
-        "popd": "OSMagics",
-        "pprint": "BasicMagics",
-        "precision": "BasicMagics",
-        "prun": "ExecutionMagics",
-        "psearch": "NamespaceMagics",
-        "psource": "NamespaceMagics",
-        "pushd": "OSMagics",
-        "pwd": "OSMagics",
-        "pycat": "OSMagics",
-        "pylab": "PylabMagics",
-        "qtconsole": "KernelMagics",
-        "quickref": "BasicMagics",
-        "recall": "HistoryMagics",
-        "rehashx": "OSMagics",
-        "reload_ext": "ExtensionMagics",
-        "rep": "Other",
-        "rerun": "HistoryMagics",
-        "reset": "NamespaceMagics",
-        "reset_selective": "NamespaceMagics",
-        "rm": "Other",
-        "rmdir": "Other",
-        "run": "ExecutionMagics",
-        "save": "CodeMagics",
-        "sc": "OSMagics",
-        "set_env": "OSMagics",
-        "store": "StoreMagics",
-        "sx": "OSMagics",
-        "system": "OSMagics",
-        "tb": "ExecutionMagics",
-        "time": "ExecutionMagics",
-        "timeit": "ExecutionMagics",
-        "unalias": "OSMagics",
-        "unload_ext": "ExtensionMagics",
-        "who": "NamespaceMagics",
-        "who_ls": "NamespaceMagics",
-        "whos": "NamespaceMagics",
-        "xdel": "NamespaceMagics",
-        "xmode": "BasicMagics"
-       }
-      },
-      "text/plain": [
-       "Available line magics:\n",
-       "%alias  %alias_magic  %autoawait  %autocall  %automagic  %autosave  %bookmark  %cat  %cd  %clear  %colors  %conda  %config  %connect_info  %cp  %debug  %dhist  %dirs  %doctest_mode  %ed  %edit  %env  %gui  %hist  %history  %killbgscripts  %ldir  %less  %lf  %lk  %ll  %load  %load_ext  %loadpy  %logoff  %logon  %logstart  %logstate  %logstop  %ls  %lsmagic  %lx  %macro  %magic  %man  %matplotlib  %mkdir  %more  %mv  %notebook  %page  %pastebin  %pdb  %pdef  %pdoc  %pfile  %pinfo  %pinfo2  %pip  %popd  %pprint  %precision  %prun  %psearch  %psource  %pushd  %pwd  %pycat  %pylab  %qtconsole  %quickref  %recall  %rehashx  %reload_ext  %rep  %rerun  %reset  %reset_selective  %rm  %rmdir  %run  %save  %sc  %set_env  %store  %sx  %system  %tb  %time  %timeit  %unalias  %unload_ext  %who  %who_ls  %whos  %xdel  %xmode\n",
-       "\n",
-       "Available cell magics:\n",
-       "%%!  %%HTML  %%SVG  %%bash  %%capture  %%debug  %%file  %%html  %%javascript  %%js  %%latex  %%markdown  %%perl  %%prun  %%pypy  %%python  %%python2  %%python3  %%ruby  %%script  %%sh  %%svg  %%sx  %%system  %%time  %%timeit  %%writefile\n",
-       "\n",
-       "Automagic is ON, % prefix IS NOT needed for line magics."
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%lsmagic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "01-introduction.ipynb  05-jupytext.ipynb      ipython_cell_input.py\r\n",
-      "02-gitbasics.ipynb     \u001b[34mdata\u001b[m\u001b[m/                  sample.txt\r\n",
-      "03-jupyter.ipynb       fibonacci.py           \u001b[34msrc\u001b[m\u001b[m/\r\n",
-      "04-binder.ipynb        \u001b[34mimages\u001b[m\u001b[m/\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "%ls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting sample.txt\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%file sample.txt\n",
-    "\n",
-    "write the cell content to the file sample.txt.\n",
-    "The file is created when you run this cell."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r\n",
-      "write the cell content to the file sample.txt.\r\n",
-      "The file is created when you run this cell.\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "%cat sample.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting fibonacci.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%file fibonacci.py\n",
-    "\n",
-    "f1, f2 = 1, 1\n",
-    "for n in range(10):\n",
-    "    print(f1, end=',')\n",
-    "    f1, f2 = f2, f1+f2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1,1,2,3,5,8,13,21,34,55,"
-     ]
-    }
-   ],
-   "source": [
-    "%run fibonacci.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1,1,2,3,5,8,13,21,34,55,"
-     ]
-    }
-   ],
-   "source": [
-    "# %load fibonacci.py\n",
-    "\n",
-    "f1, f2 = 1, 1\n",
-    "for n in range(10):\n",
-    "    print(f1, end=',')\n",
-    "    f1, f2 = f2, f1+f2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1,1,2,3,5,8,13,21,34,55,\n",
-      "CPU times: user 827 µs, sys: 1.06 ms, total: 1.89 ms\n",
-      "Wall time: 1.57 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "f1, f2 = 1, 1\n",
-    "for n in range(10):\n",
-    "    print(f1, end=',')\n",
-    "    f1, f2 = f2, f1+f2\n",
-    "print()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Installing Python Packages from a Jupyter Notebook\n",
-    "\n",
-    "### Install a conda package in the current Jupyter kernel\n",
-    "\n",
-    "Example with package `numpy` from *conda-forge*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "```py\n",
-    "# %conda install -c conda-forge lorem\n",
-    "```"
-   ]
   }
  ],
  "metadata": {
