--- a/notebooks/06-binder.ipynb
+++ b/notebooks/06-binder.ipynb
@@ -10,8 +10,7 @@
    "source": [
     "# Binder \n",
     "\n",
-    "- This is a free, public demo of BinderHub the software BinderHub.\n",
-    "- Binder is a service that provides to your code, the hardware, and the software.\n"
+    "- Service d'hébergement temporaire pour partager une application en ligne gratuitement"
    ]
   },
   {
@@ -22,15 +21,18 @@
     }
    },
    "source": [
-    "# Preparing a repository for Binder\n",
+    "## Preparer son dépôt github pour Binder\n",
     "\n",
-    "## Supported configuration files list in the order of build priority\n",
+    "### Les fichiers de configuration\n",
     "\n",
     "- Dockerfile\n",
-    "- environment.yml  \n",
-    "- requirements.txt \n",
-    "- apt.txt          \n",
-    "- postBuild"
+    "- environment.yml  (Python/R)\n",
+    "- requirements.txt (Python)\n",
+    "- apt.txt  (paquets ubuntu)      \n",
+    "- postBuild # script à exécuter après construction de l'image\n",
+    "- Project.toml # Julia\n",
+    "- runtime.txt # R\n",
+    "- install.R # R\n"
    ]
   },
   {
@@ -43,17 +45,18 @@
    "source": [
     "## environment.yml\n",
     "\n",
-    "This is a conda environment specification, that lets you install packages with conda (https://conda.io/docs/).\n",
+    "Fichier pour conda environment (https://conda.io/docs/).\n",
     "\n",
-    "Example Contents\n",
-    "~~~\n",
+    "Exemple\n",
+    "~~~yaml\n",
     "channels:\n",
     "  - conda-forge\n",
     "  - defaults\n",
     "dependencies:\n",
     "  - matplotlib\n",
+    "  - pip\n",
     "  - pip:\n",
-    "    - pythran\n",
+    "    - nbcourse\n",
     "~~~"
    ]
   },
@@ -67,9 +70,9 @@
    "source": [
     "## requirements.txt\n",
     "\n",
-    "This specifies a list of Python packages that should be installed in a virtualenv (or conda environment).\n",
+    "Fichier pour installer une liste de paquets Python avec pip\n",
     "\n",
-    "Example Contents\n",
+    "Exemple\n",
     "\n",
     "~~~\n",
     "numpy==1.11\n",
@@ -88,9 +91,9 @@
    "source": [
     "## apt.txt\n",
     "\n",
-    "A list of Debian packages that should be installed. The base image used is usually the latest released version of Ubuntu.\n",
+    "Liste de paquets à installer. L'image de base est la dernière version ubuntu\n",
     "\n",
-    "Example Contents\n",
+    "Exemple\n",
     "\n",
     "~~~\n",
     "ffmpeg\n",
@@ -107,17 +110,19 @@
    },
    "source": [
     "## postBuild\n",
-    "A script that can contain arbitrary commands to be run after the whole repository has been built. If you want this to be a shell script, make sure the first line is `#!/bin/bash`.\n",
     "\n",
-    "Example Contents\n",
+    "Script à exécuter après la construction de l'image.\n",
+    "\n",
+    "Exemple:\n",
     "\n",
     "~~~\n",
+    "#!/bin/bash\n",
     "wget <url-to-dataset>\n",
     "python myfile.py\n",
     "~~~\n",
     "\n",
     "### Note:\n",
-    "This file must be executable.\n",
+    "Le fichier doit être éxécutable\n",
     "```"
    ]
   },
@@ -129,11 +134,11 @@
     }
    },
    "source": [
-    "## Launching your Binder\n",
+    "## Démarrer Binder\n",
     "\n",
-    "- Go to mybinder.org and insert the URL for your git repository. \n",
-    "- Press Launch to automatically create your Binder. \n",
-    "- Binder will only build a new one if the git hashes don’t match.\n"
+    "- Aller sur <https://mybinder.org> et copier-coller l'adresse de votre dépôt git. \n",
+    "- Cliquer sur `Launch`. \n",
+    "- Une nouvelle image sera construite uniquement si votre dépôt a été modifié.\n"
    ]
   },
   {
@@ -146,7 +151,9 @@
    "source": [
     "## JupyterLab + Binder\n",
     "\n",
-    "1. Launch a Binder instance"
+    "1. Launch a Binder instance\n",
+    "\n",
+    "Par défaut vous aurez un accès à un serveur jupyter classique."
    ]
   },
   {
@@ -157,9 +164,9 @@
     }
    },
    "source": [
-    "2. Replace tree at the end of your URL with lab.\n",
+    "2. Remplacer `tree` par `lab`\n",
     "```\n",
-    "https://hub.mybinder.org/user/groupecalcul-canum-2018-la7iw4x1/tree\n",
+    "https://hub.mybinder.org/user/pnavaro/agrocampus/tree\n",
     "```\n"
    ]
   },
@@ -185,9 +192,29 @@
     }
    },
    "source": [
-    "## Want to setup your own copy of mybinder.org? \n",
+    "## Exemple avec R\n",
     "\n",
-    "Then look at BinderHub and the \"[Zero to BinderHub](https://zero-to-jupyterhub.readthedocs.io/en/latest/index.html)\" guide "
+    "runtime.txt:\n",
+    "```\n",
+    "r-<YYYY>-<MM>-<DD`\n",
+    "```\n",
+    "\n",
+    "https://github.com/binder-examples/r"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fichier `install.R` pour les dépendances:\n",
+    "    \n",
+    "```R\n",
+    "install.packages(\"tidyverse\")\n",
+    "install.packages(\"rmarkdown\")\n",
+    "install.packages(\"httr\")\n",
+    "install.packages(\"shinydashboard\")\n",
+    "install.packages('leaflet')\n",
+    "```"
    ]
   },
   {
@@ -198,34 +225,15 @@
     }
    },
    "source": [
-    " ## Remarks\n",
+    " ## Remarques\n",
     " \n",
-    " - Everything that happens in a Binder session is destroyed when the user logs off or becomes inactive for more than a few minutes.\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    " - Never share sensitive or personal information within a Binder repository.\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    " - The maximum number of simultaneous users for a given repo is 100\n",
-    " "
+    " - Tout ce qui se passe dans une application binder est détruit au bout de quelques minutes d'inactivité\n",
+    " - Ne laissez aucune information sensible dans une image binder (identifiants, mot de passe, liste d'emails, ...)\n",
+    " - Le maximum de connexions simultannées est 100\n",
+    " - Vous avez 1Go de RAM garanti et cela peut aller jusqu'à 4Go\n",
+    " - Si vous restez actif, vous pouvez utiliser une session biender pendant 12 heures\n",
+    " - Ne faites aucun push vers github depuis une session binder\n",
+    " - Vous pouvez également déposer vos fichiers de configuration dans un répertoire nommé `binder`."
    ]
   },
   {
@@ -236,70 +244,13 @@
     }
    },
    "source": [
-    " - You are guaranteed to have at least 1G of RAM. There is an upper-limit of 4GB.\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    " - Binder automatically shut down user sessions that have more than 10 minutes of inactivity\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    " - Binder aims to provide at least 12 hours of session time per user session.\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    " - Do not push information from a Binder session onto GitHub.\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    " - Configuration files may be placed in the root of your repository or in a **binder/** folder."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Need some examples or want to start from a working setup? \n",
+    "## Examples\n",
     "\n",
-    "A lots of examples that work Python, R, Latex, conda, docker...\n",
+    "Beaucoup d'exemples sont disponibles pour Python, R, Latex, conda, docker...\n",
     "\n",
-    "http://mybinder.readthedocs.io/en/latest/sample_repos.html"
+    "<http://mybinder.readthedocs.io/en/latest/sample_repos.html>\n",
+    "\n",
+    "<https://github.com/binder-examples>"
    ]
   }
  ],
@@ -320,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
