--- a/notebooks/04-docker.ipynb
+++ b/notebooks/04-docker.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center> <h1> Docker </h1> </center>\n",
+    "# Docker\n",
     "\n",
     "<img width=200 src=\"images/Moby-logo.png\">"
    ]
