--- a/notebooks/07-jupytext.ipynb
+++ b/notebooks/07-jupytext.ipynb
@@ -8,13 +8,12 @@
     }
    },
    "source": [
-    "# Jupyter Notebook\n",
+    "# Jupytext et pandoc\n",
     "\n",
-    "Jupyter notebook, formerly known as the IPython notebook, is a flexible tool that helps you create readable analyses, as you can keep code, images, comments, formulae and plots together.\n",
+    "Jupytext est un outil de conversion de format des notebooks. Il permet de synchroniser des \n",
+    "notebooks au format ipynb avec des scripts commentés (Julia, Python ou R), ou en fichier markdown.\n",
     "\n",
-    "Jupyter is quite extensible, supports many programming languages and is easily hosted on your computer or on almost any server — you only need to have ssh or http access. Best of all, it's completely free.\n",
-    "\n",
-    "The name Jupyter is an indirect acronyum of the three core languages it was designed for: **JU**lia, **PYT**hon, and **R**"
+    "Pandoc est un outil de conversion des fichiers markdown vers des formats d'édition ou d'impression comme html, pdf, latex ou word."
    ]
   },
   {
@@ -25,41 +24,14 @@
     }
    },
    "source": [
-    "# Installation \n",
-    " \n",
-    "## Installation with conda\n",
-    "```bash\n",
-    "conda install -c conda-forge jupyter\n",
+    "## Installlation\n",
+    "\n",
     "```\n",
-    "\n",
-    "## with pip\n",
-    "```bash\n",
-    "pip install jupyter\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Installing Python Packages from a Jupyter Notebook\n",
-    "\n",
-    "### Install a conda package in the current Jupyter kernel\n",
-    "\n",
-    "Example with package `numpy` from *conda-forge*\n",
-    "```python\n",
-    "import sys\n",
-    "!conda install --yes --prefix {sys.prefix} -c conda-forge numpy\n",
+    "conda install -c conda-forge jupytext\n",
     "```\n",
-    "\n",
-    "### Install a pip package in the current Jupyter kernel\n",
+    "ou\n",
     "```\n",
-    "import sys\n",
-    "!{sys.executable} -m pip install numpy\n",
+    "pip install jupytext\n",
     "```"
    ]
   },
@@ -821,7 +793,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
