--- a/notebooks/01-introduction.ipynb
+++ b/notebooks/01-introduction.ipynb
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,19 +626,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " "
+      " \n",
+      "*** Profile printout saved to text file 'prof.txt'. \n"
      ]
     }
    ],
    "source": [
-    "%prun fibonacci(10)"
+    "%prun -q -T prof.txt fibonacci(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         14 function calls in 0.000 seconds\r\n",
+      "\r\n",
+      "   Ordered by: internal time\r\n",
+      "\r\n",
+      "   ncalls  tottime  percall  cumtime  percall filename:lineno(function)\r\n",
+      "        1    0.000    0.000    0.000    0.000 {built-in method builtins.exec}\r\n",
+      "        1    0.000    0.000    0.000    0.000 <ipython-input-15-fbbc9226da40>:2(fibonacci)\r\n",
+      "       10    0.000    0.000    0.000    0.000 {method 'append' of 'list' objects}\r\n",
+      "        1    0.000    0.000    0.000    0.000 <string>:1(<module>)\r\n",
+      "        1    0.000    0.000    0.000    0.000 {method 'disable' of '_lsprof.Profiler' objects}"
+     ]
+    }
+   ],
+   "source": [
+    "%cat prof.txt"
    ]
   },
   {
