fix titles again

--- a/notebooks/10-exemple-r.ipynb
+++ b/notebooks/10-exemple-r.ipynb
@@ -10,6 +10,15 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "options(jupyter.plot_mimetypes = c(\"text/plain\", \"image/png\" )) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "echo": true,
     "lines_to_next_cell": 2
@@ -36,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "message": false,
     "warning": false
@@ -62,6 +71,13 @@
     "library(ggplot2)\n",
     "ggplot(donnees)+aes(x=X1,y=X2,color=Y)+geom_point()+theme_classic()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
