--- a/pages/titlepage.tex
+++ b/pages/titlepage.tex
@@ -4,13 +4,11 @@
 \vspace*{\baselineskip} 
 
 \centering  
-{\Large Author1 \& Author2}
+{\Large Pierre Navaro}
 \vspace*{0.167\textheight} 
 
 \raggedleft
-\textbf{\fontsize{30}{36}\selectfont Learning}\\[\baselineskip] 
-\textbf{\textcolor{pythonblue}{\fontsize{50}{60}\selectfont Python}}\\[\baselineskip]  
-\textcolor{pythonyellow}{\fontsize{30}{36}\selectfont \textit{for sciences}}
+\textbf{\fontsize{30}{36}\selectfont Github, Docker et Jupyter}
 
 \vspace*{0.1\textheight} 
 
