--- a/notebooks/03-markdown.ipynb
+++ b/notebooks/03-markdown.ipynb
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La documentation des fonctions Julia est en markdown. Il n'y a pas de système de documentation intégré pour la langage R mais [roxygen2](https://cran.r-project.org/web/packages/roxygen2/) est le package utilisé. La syntaxe a des similarités avec [$\\LaTeX$](https://fr.wikipedia.org/wiki/LaTeX)\n",
+    "La documentation des fonctions Julia est en markdown. Il n'y a pas de système de documentation intégré pour la langage R mais [roxygen2](https://cran.r-project.org/web/packages/roxygen2/) est le package utilisé. La syntaxe a des similarités avec [LaTeX](https://fr.wikipedia.org/wiki/LaTeX)\n",
     "\n",
     "Les fichiers markdown sont identifiés par la terminaison `.md`.\n",
     "\n",
@@ -109,14 +109,13 @@
     "\n",
     "Section\n",
     "---------\n",
-    "```"
+    "```\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "## **Gras**, *italique*, `script`\n",
     "\n"
    ]
@@ -277,7 +276,7 @@
    "metadata": {},
    "source": [
     "# Equations\n",
-    "Les mathématiques sont écrites en langage $\\LaTeX$\n",
+    "Les mathématiques sont écrites en langage LaTeX\n",
     "\n",
     "$$\n",
     "\\text{Dist}(G):=\\bigcup_{n\\ge 0} \\text{Dist}_n(G).\n",
