fix image issue

--- a/notebooks/03-markdown.ipynb
+++ b/notebooks/03-markdown.ipynb
@@ -233,12 +233,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Images\n",
-    "\n",
-    "\n",
+    "## Images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```markdown\n",
     "![texte alt](https://www.agrocampus-ouest.fr/files/images/logos/header/logo-agrocampus-ouest.png \"Logo Agrocampus\")\n",
     "\n",
-    "![Logo Agrocampus](https://www.agrocampus-ouest.fr/files/images/logos/header/logo-agrocampus-ouest.png)"
+    "![Logo Agrocampus](https://www.agrocampus-ouest.fr/files/images/logos/header/logo-agrocampus-ouest.png)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Logo Agrocampus](images/logo-agrocampus-ouest.png)"
    ]
   },
   {
