--- a/notebooks/08-exemple-julia.ipynb
+++ b/notebooks/08-exemple-julia.ipynb
@@ -11,7 +11,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m   Updating\u001b[22m\u001b[39m registry at `~/.julia/registries/General`\n"
+     ]
+    }
+   ],
    "source": [
     "using Pkg\n",
     "Pkg.add(\"Plots\")\n",
