--- a/notebooks/03-markdown.ipynb
+++ b/notebooks/03-markdown.ipynb
@@ -326,11 +326,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$\n",
     "\\begin{bmatrix}\n",
     "a & b & c \\\\\n",
     "d & e & f \\\\\n",
     "g & h & i\n",
-    "\\end{bmatrix}"
+    "\\end{bmatrix}\n",
+    "$$"
    ]
   },
   {
