--- a/notebooks/01-introduction.ipynb
+++ b/notebooks/01-introduction.ipynb
@@ -840,8 +840,8 @@
    "lastKernelId": null
   },
   "jupytext": {
-   "encoding": "# -*- coding: utf-8 -*-",
-   "formats": "ipynb,../src//py"
+   "cell_metadata_filter": "-all",
+   "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
    "display_name": "Python 3",
