--- a/notebooks/02-gitbasics.ipynb
+++ b/notebooks/02-gitbasics.ipynb
@@ -23,7 +23,7 @@
     }
    },
    "source": [
-    "# GitHub\n",
+    "## GitHub\n",
     "\n",
     "- Service web utilisant Git comme gestionnaire de version. \n",
     "- Github permet d'enregistrer et partager toutes les étapes de développement d'un logiciel ou de la rédaction d'un document au format texte au cours du temps. A tout moment vous pouvez revenir à une précedente version, l'ensemble de l'historique est toujours préservé. \n",
@@ -39,7 +39,7 @@
     }
    },
    "source": [
-    "# SCM (Source Code Management)\n",
+    "## SCM (Source Code Management)\n",
     "\n",
     "- Enregistrement des changements dans un ou plusieurs fichiers au cours du temps.\n",
     "- Vous pouvez revenir a tout moment vers une version précedente.\n",
@@ -58,7 +58,7 @@
     }
    },
    "source": [
-    "# Gestion distribuée des versions\n",
+    "## Gestion distribuée des versions\n",
     "\n",
     "<img src=\"images/git.png\" alt=\"git\" width=\"300px\"/>\n",
     "\n",
@@ -78,7 +78,7 @@
     }
    },
    "source": [
-    "# Configuration\n",
+    "## Configuration\n",
     "\n",
     "Il faut renseigner votre identité avec votre adresse de messagerie\n",
     "\n",
@@ -96,7 +96,7 @@
     }
    },
    "source": [
-    "# Clonage du dépôt\n",
+    "## Clonage du dépôt\n",
     "\n",
     "git clone https://github.com/pnavaro/big-data.git"
    ]
@@ -109,7 +109,7 @@
     }
    },
    "source": [
-    "# Branche\n",
+    "## Branche\n",
     "\n",
     "```bash\n",
     "git checkout -b my_branch\n",
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Four File status in the repository\n",
+    "## Four File status in the repository\n",
     "  \n",
     "<img src=\"images/18333fig0201-tn.png\" alt=\"git\" width=\"450px\"/>"
    ]
@@ -133,7 +133,7 @@
     }
    },
    "source": [
-    "# Git Workflow\n",
+    "## Git Workflow\n",
     "\n",
     "<img src=\"images/four_stages.png\" alt=\"git\" width=\"150px\"/>"
    ]
@@ -146,7 +146,7 @@
     }
    },
    "source": [
-    "# Verifier les fichiers modifiés\n"
+    "## Verifier les fichiers modifiés\n"
    ]
   },
   {
@@ -165,12 +165,13 @@
       "On branch master\n",
       "Your branch is up to date with 'origin/master'.\n",
       "\n",
-      "Untracked files:\n",
-      "  (use \"git add <file>...\" to include in what will be committed)\n",
-      "\t../environment.yml\n",
-      "\t../install.R\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\tmodified:   01-introduction.ipynb\n",
+      "\tmodified:   02-gitbasics.ipynb\n",
       "\n",
-      "nothing added to commit but untracked files present (use \"git add\" to track)\n"
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
      ]
     }
    ],
@@ -187,7 +188,7 @@
     }
    },
    "source": [
-    "# Ajouter le fichier dans l'index\n",
+    "## Ajouter le fichier dans l'index\n",
     "\n",
     "```bash\n",
     "git add your_notebook_copy.ipynb\n",
@@ -202,7 +203,7 @@
     }
    },
    "source": [
-    "# Verification avant validation"
+    "## Verification avant validation"
    ]
   },
   {
@@ -226,7 +227,7 @@
     }
    },
    "source": [
-    "# Validation (commit)\n",
+    "## Validation (commit)\n",
     "\n",
     "```bash\n",
     "git commit -m 'Some modifications'\n",
@@ -241,7 +242,7 @@
     }
    },
    "source": [
-    "# Synchroniser avec la version distante sur le dépôt\n"
+    "## Synchroniser avec la version distante sur le dépôt\n"
    ]
   },
   {
@@ -271,7 +272,7 @@
     }
    },
    "source": [
-    "# Résoudre les conflits\n",
+    "## Résoudre les conflits\n",
     "\n",
     "- En cas de problémes sur un fichier, vous pouvez annuler toutes les modifications avec :\n",
     "\n",
@@ -296,7 +297,7 @@
     }
    },
    "source": [
-    "# Git en version graphique\n",
+    "## Git en version graphique\n",
     "\n",
     "- [GitHub Desktop](https://desktop.github.com/)\n",
     "- [Sourcetree](https://fr.atlassian.com/software/sourcetree)\n",
@@ -307,13 +308,6 @@
     "\t- [Eclipse](https://www.eclipse.org/downloads/)\n",
     "\t- [JetBrains](https://www.jetbrains.com/)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -322,7 +316,8 @@
    "lastKernelId": null
   },
   "jupytext": {
-   "formats": "ipynb,../src//py"
+   "cell_metadata_filter": "-all",
+   "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
    "display_name": "Python 3",
