--- a/notebooks/06-binder.ipynb
+++ b/notebooks/06-binder.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "## Preparer son dépôt github pour Binder\n",
     "\n",
-    "### Les fichiers de configuration\n",
+    "Les fichiers de configuration\n",
     "\n",
     "- Dockerfile\n",
     "- environment.yml  (Python/R)\n",
@@ -43,7 +43,7 @@
     }
    },
    "source": [
-    "## environment.yml\n",
+    "### environment.yml\n",
     "\n",
     "Fichier pour conda environment (https://conda.io/docs/).\n",
     "\n",
@@ -68,7 +68,7 @@
     }
    },
    "source": [
-    "## requirements.txt\n",
+    "### requirements.txt\n",
     "\n",
     "Fichier pour installer une liste de paquets Python avec pip\n",
     "\n",
@@ -89,7 +89,7 @@
     }
    },
    "source": [
-    "## apt.txt\n",
+    "### apt.txt\n",
     "\n",
     "Liste de paquets à installer. L'image de base est la dernière version ubuntu\n",
     "\n",
@@ -109,7 +109,7 @@
     }
    },
    "source": [
-    "## postBuild\n",
+    "### postBuild\n",
     "\n",
     "Script à exécuter après la construction de l'image.\n",
     "\n",
@@ -121,7 +121,7 @@
     "python myfile.py\n",
     "~~~\n",
     "\n",
-    "### Note:\n",
+    "Note:\n",
     "Le fichier doit être éxécutable\n",
     "```"
    ]
