--- a/notebooks/09-exemple-python.ipynb
+++ b/notebooks/09-exemple-python.ipynb
@@ -8,6 +8,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Documentation de fonction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bspline(p, j, x):\n",
+    "     \"\"\"\n",
+    "    Return the value at x in [0,1[ of the B-spline with integer nodes of degree p with support starting at j.\n",
+    "    Implemented recursively using the [De Boor's Algorithm](https://en.wikipedia.org/wiki/De_Boor%27s_algorithm)\n",
+    "\n",
+    "    .. math::\n",
+    "        B_{i,0}(x) := \\left\\{\n",
+    "        \\begin{matrix}\n",
+    "        1 & \\mathrm{if}  \\quad t_i ≤ x < t_{i+1} \\\\\n",
+    "        0 & \\mathrm{otherwise} \n",
+    "        \\end{matrix}\n",
+    "        \\right.\n",
+    "\n",
+    "    .. math::\n",
+    "            B_{i,p}(x) := \\frac{x - t_i}{t_{i+p} - t_i} B_{i,p-1}(x) \n",
+    "            + \\frac{t_{i+p+1} - x}{t_{i+p+1} - t_{i+1}} B_{i+1,p-1}(x).\n",
+    "\n",
+    "     \"\"\"\n",
+    "\n",
+    "     assert ((x >= 0.0) & (x <= 1.0))\n",
+    "     assert ((type(p) == int) & (type(j) == int))\n",
+    "\n",
+    "     if p == 0:\n",
+    "         if j == 0:\n",
+    "             return 1.0\n",
+    "         else:\n",
+    "             return 0.0\n",
+    "     else:\n",
+    "         w = (x - j) / p\n",
+    "         w1 = (x - j - 1) / p\n",
+    "         return w * bspline(p - 1, j, x) + (1 - w1) * bspline(p - 1, j + 1, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    Return the value at x in [0,1[ of the B-spline with integer nodes of degree p with support starting at j.\n",
+      "    Implemented recursively using the [De Boor's Algorithm](https://en.wikipedia.org/wiki/De_Boor%27s_algorithm)\n",
+      "\n",
+      "    .. math::\n",
+      "        B_{i,0}(x) := \\left\\{\n",
+      "        \begin{matrix}\n",
+      "        1 & \\mathrm{if}  \\quad t_i ≤ x < t_{i+1} \\\n",
+      "        0 & \\mathrm{otherwise} \n",
+      "        \\end{matrix}\n",
+      "        \r",
+      "ight.\n",
+      "\n",
+      "    .. math::\n",
+      "            B_{i,p}(x) := \f",
+      "rac{x - t_i}{t_{i+p} - t_i} B_{i,p-1}(x) \n",
+      "            + \f",
+      "rac{t_{i+p+1} - x}{t_{i+p+1} - t_{i+1}} B_{i+1,p-1}(x).\n",
+      "\n",
+      "     \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bspline.__doc__)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
