--- a/notebooks/03-markdown.ipynb
+++ b/notebooks/03-markdown.ipynb
@@ -223,10 +223,14 @@
    "source": [
     "## Lignes de séparation\n",
     "\n",
+    "Il y a plusieurs possibilités, préférez les versions avec les espaces car cela peut être confondu avec des titres lors d'une conversion en html ou pdf.\n",
+    "\n",
+    "```markdown\n",
     "***\n",
     "---\n",
     "- - -\n",
-    "*    *    *\n"
+    "*    *    *\n",
+    "```"
    ]
   },
   {
@@ -288,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Equations\n",
+    "## Equations\n",
     "Les mathématiques sont écrites en langage LaTeX\n",
     "\n",
     "$$\n",
@@ -341,206 +345,6 @@
    "source": [
     "Les fonctionnalités peuvent être plus riches avec des emojis par example. Voir [Mastering Markdown](https://guides.github.com/features/mastering-markdown/)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TestResults(failed=0, attempted=0)"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import doctest\n",
-    "doctest.testmod()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing bspline.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%file bspline.py\n",
-    "def bspline(p, j, x):\n",
-    "     \"\"\"\n",
-    "    Return the value at x in [0,1[ of the B-spline with integer nodes of degree p with support starting at j.\n",
-    "    Implemented recursively using the [De Boor's Algorithm](https://en.wikipedia.org/wiki/De_Boor%27s_algorithm)\n",
-    "\n",
-    "    .. math::\n",
-    "        B_{i,0}(x) := \\left\\{\n",
-    "        \\begin{matrix}\n",
-    "        1 & \\mathrm{if}  \\quad t_i ≤ x < t_{i+1} \\\\\n",
-    "        0 & \\mathrm{otherwise} \n",
-    "        \\end{matrix}\n",
-    "        \\right.\n",
-    "\n",
-    "    .. math::\n",
-    "            B_{i,p}(x) := \\frac{x - t_i}{t_{i+p} - t_i} B_{i,p-1}(x) \n",
-    "            + \\frac{t_{i+p+1} - x}{t_{i+p+1} - t_{i+1}} B_{i+1,p-1}(x).\n",
-    "\n",
-    "     \"\"\"\n",
-    "\n",
-    "     assert ((x >= 0.0) & (x <= 1.0))\n",
-    "     assert ((type(p) == int) & (type(j) == int))\n",
-    "\n",
-    "     if p == 0:\n",
-    "         if j == 0:\n",
-    "             return 1.0\n",
-    "         else:\n",
-    "             return 0.0\n",
-    "     else:\n",
-    "         w = (x - j) / p\n",
-    "         w1 = (x - j - 1) / p\n",
-    "         return w * bspline(p - 1, j, x) + (1 - w1) * bspline(p - 1, j + 1, x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function bspline in module __main__:\n",
-      "\n",
-      "bspline(p, j, x)\n",
-      "    Return the value at x in [0,1[ of the B-spline with integer nodes of degree p with support starting at j.\n",
-      "    Implemented recursively using the [De Boor's Algorithm](https://en.wikipedia.org/wiki/De_Boor%27s_algorithm)\n",
-      "    \n",
-      "    .. math::\n",
-      "        B_{i,0}(x) := \\left\\{\n",
-      "       egin{matrix}\n",
-      "        1 & \\mathrm{if}  \\quad t_i ≤ x < t_{i+1} \\\n",
-      "        0 & \\mathrm{otherwise} \n",
-      "        \\end{matrix}\n",
-      "        \r",
-      "ight.\n",
-      "    \n",
-      "    .. math::\n",
-      "            B_{i,p}(x) := \f",
-      "rac{x - t_i}{t_{i+p} - t_i} B_{i,p-1}(x) \n",
-      "            + \f",
-      "rac{t_{i+p+1} - x}{t_{i+p+1} - t_{i+1}} B_{i+1,p-1}(x).\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "bspline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Documentation de code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def bspline(p, j, x):\n",
-    "    \"\"\"\n",
-    "    Return the value at x in [0,1[ of the B-spline with integer nodes of degree p with support starting at j.\n",
-    "    Implemented recursively using the [De Boor's Algorithm](https://en.wikipedia.org/wiki/De_Boor%27s_algorithm)\n",
-    "    \n",
-    "    .. math::\n",
-    "        B_{i,0}(x) := \\left\\{\n",
-    "        \\begin{matrix}\n",
-    "        1 & \\mathrm{if}  \\quad t_i ≤ x < t_{i+1} \\\\\n",
-    "        0 & \\mathrm{otherwise} \n",
-    "        \\end{matrix}\n",
-    "        \\right.\n",
-    "    \n",
-    "    .. math::\n",
-    "            B_{i,p}(x) := \\frac{x - t_i}{t_{i+p} - t_i} B_{i,p-1}(x) \n",
-    "            + \\frac{t_{i+p+1} - x}{t_{i+p+1} - t_{i+1}} B_{i+1,p-1}(x).\n",
-    "    \n",
-    "    \"\"\"\n",
-    "\n",
-    "    assert ((x >= 0.0) & (x <= 1.0))\n",
-    "    assert ((type(p) == int) & (type(j) == int))\n",
-    "\n",
-    "    if p == 0:\n",
-    "         if j == 0:\n",
-    "            return 1.0\n",
-    "         else:\n",
-    "            return 0.0\n",
-    "    else:\n",
-    "        w = (x - j) / p\n",
-    "        w1 = (x - j - 1) / p\n",
-    "        return w * bspline(p - 1, j, x) + (1 - w1) * bspline(p - 1, j + 1, x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "~~~julia\n",
-    "\"\"\"\n",
-    "    bspline(p, j, x)\n",
-    "\n",
-    "Return the value at x in [0,1[ of the B-spline with integer nodes of degree p with support starting at j.\n",
-    "Implemented recursively using the [De Boor's Algorithm](https://en.wikipedia.org/wiki/De_Boor%27s_algorithm)\n",
-    "\n",
-    "```math\n",
-    "B_{i,0}(x) := \\\\left\\\\{\n",
-    "\\\\begin{matrix}\n",
-    "1 & \\\\mathrm{if}  \\\\quad t_i ≤ x < t_{i+1} \\\\\\\\\n",
-    "0 & \\\\mathrm{otherwise} \n",
-    "\\\\end{matrix}\n",
-    "\\\\right.\n",
-    "```\n",
-    "\n",
-    "```math\n",
-    "B_{i,p}(x) := \\\\frac{x - t_i}{t_{i+p} - t_i} B_{i,p-1}(x) \n",
-    "+ \\\\frac{t_{i+p+1} - x}{t_{i+p+1} - t_{i+1}} B_{i+1,p-1}(x).\n",
-    "```\n",
-    "\"\"\"\n",
-    "function bspline(p::Int, j::Int, x::Float64)\n",
-    "   if p == 0\n",
-    "       if j == 0\n",
-    "           return 1.0\n",
-    "       else\n",
-    "           return 0.0\n",
-    "       end\n",
-    "   else\n",
-    "       w = (x - j) / p\n",
-    "       w1 = (x - j - 1) / p\n",
-    "   end\n",
-    "   return (w * bspline(p - 1, j, x) + (1 - w1) * bspline(p - 1, j + 1, x))\n",
-    "end\n",
-    "~~~"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
